objects/JunoDoc__Email_Details__c/JunoDoc__Email_Details__c.object-meta.xml
<CustomObject>
    <label>Email Details</label>
    <nameField>
        <label>Email Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>