objects/JunoDoc__Email_Details__c/fields/JunoDoc__Email__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>