objects/JunoDoc__Email_Details__c/fields/JunoDoc__field_Details__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__field_Details__c</fullName>
    <label>field Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>