objects/JunoDoc__Email_Details__c/fields/JunoDoc__Junodoc_Details__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Details</label>
    <referenceTo>JunoDoc__Junodoc_Details__c</referenceTo>
    <relationshipLabel>Email Details</relationshipLabel>
    <relationshipName>Email_Details</relationshipName>
    <type>Lookup</type>
</CustomField>