objects/JunoDoc__Email_Details__c/fields/JunoDoc__Junosign_Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junosign_Object_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junosign Object Setting</label>
    <referenceTo>JunoDoc__Junosign_Object_Setting__c</referenceTo>
    <relationshipLabel>Email Details</relationshipLabel>
    <relationshipName>Email_Details</relationshipName>
    <type>Lookup</type>
</CustomField>