objects/JunoDoc__Email_Details__c/fields/JunoDoc__Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>