objects/JunoDoc__Email_Details__c/fields/JunoDoc__Text_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Text_Ref_Value__c</fullName>
    <label>Text Ref Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>