objects/JunoDoc__Email_Details__c/fields/JunoDoc__To_Value__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__To_Value__c</fullName>
    <label>To Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>